<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayThisUser">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_account_circle_black_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/profile_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:srcCompat="@drawable/ic_account_circle_black_24dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:fontFamily="@font/baumans"
                android:textSize="50sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/textView12"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/baumans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textSize="50sp"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/baumans"
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/textView16"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/baumans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upvotes" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/linearlayout1"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout1"
        android:layout_marginTop="23dp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/baumans"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="350dp"
        android:maxHeight="70dp"
        android:text="@string/status_default"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/baumans"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonbg"
        android:paddingStart="40dp"
        android:paddingEnd="60dp"
        android:onClick="sentReq"
        android:textColor="@android:color/white"
        android:text="@string/send_request"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar6"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintBottom_toBottomOf="@+id/button7" />

    <ProgressBar
        android:id="@+id/progressBar7"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintBottom_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decline_request"
        android:background="@drawable/buttonbg"
        android:textColor="@android:color/white"
        android:paddingStart="40dp"
        android:paddingEnd="60dp"
        android:onClick="decReq"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button7"/>


</androidx.constraintlayout.widget.ConstraintLayout>