<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="20dp"
    tools:context=".TossWritingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toss_card"
            android:elevation="2dp"
            android:overScrollMode="always"
            android:padding="20dp"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/toss_details"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <EditText
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView29"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="15dp"
                android:background="@drawable/edittextbg"
                android:ems="10"
                android:hint="@string/toss_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="15dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextTextMultiLine2"
                android:layout_centerHorizontal="true"
                android:background="@drawable/buttonbg"
                android:onClick="sendToss"
                android:paddingHorizontal="30dp"
                android:text="@string/send_toss"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar11"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>